--- a/Android_Res_Export.sketchplugin/Contents/Resources/manifest_en.json
+++ b/Android_Res_Export.sketchplugin/Contents/Resources/manifest_en.json
@@ -23,6 +23,22 @@
             "handler": "newVectorAsset",
             "script": "new/new_asset.cocoascript"
         },
+        {
+            "name": "New Nine-Patch Asset",
+            "identifier": "new_nine_patch_asset",
+            "script": "new/new_nine_patch_asset.cocoascript"
+        },
+        {
+            "name": "New App Icon",
+            "identifier": "new_app_icon",
+            "script": "new/new_app_icon.cocoascript"
+        },
+
+
+
+
+
+
 
         {
             "handlers": {
@@ -33,24 +49,26 @@
             "script": "utilities/change_language.cocoascript"
         },
 
-        {
-            "name": "New Nine-Patch Asset",
-            "identifier": "new_nine_patch_asset",
-            "script": "new/new_nine_patch_asset.cocoascript"
-        },
 
         {
-            "name": "New App Icon (Legacy)",
-            "identifier": "new_app_icon_legacy",
-            "handler": "newAppIconTemplateLegacy",
-            "script": "new/new_app_icon.cocoascript"
+            "name": "Nine-Patch Preview",
+            "identifier": "nine_patch_preview",
+            "script": "preview/nine_patch_preview.cocoascript"
         },
         {
-            "name": "New App Icon",
-            "identifier": "new_app_icon",
-            "handler": "newAppIconTemplate",
-            "script": "new/new_app_icon.cocoascript"
+            "name": "View Color Code From Selected Layer",
+            "identifier": "color_resource_code_from_selected_layer",
+            "handler": "viewColorCodeFromLayers",
+            "script": "preview/code_preview.cocoascript"
         },
+        {
+            "name": "View Shape Drawable XML Code",
+            "identifier": "view_shape_xml_code",
+            "handler": "viewShapeXMLCode",
+            "script": "export/code_preview.cocoascript"
+        },
+
+
         {
             "name": "Export Bitmap Assets",
             "identifier": "export_png_assets",
@@ -71,29 +89,10 @@
             "identifier": "export_app_icon",
             "script": "export/export_app_icon.cocoascript"
         },
-        {
-            "name": "Export Shape Drawable XML",
-            "identifier": "export_shape_xml",
-            "handler": "exportShapeXML",
-            "script": "export/export_shape_xml.cocoascript"
-        },
-        {
-            "name": "Nine-Patch Preview",
-            "identifier": "nine_patch_preview",
-            "script": "preview/nine_patch_preview.cocoascript"
-        },
-        {
-            "name": "Color Resource Code From Selected Layer",
-            "identifier": "color_resource_code_from_selected_layer",
-            "handler": "colorResourceCodeFromLayers",
-            "script": "preview/color_code_preview.cocoascript"
-        },
-        {
-            "name": "View Shape Drawable XML Code",
-            "identifier": "view_shape_xml_code",
-            "handler": "viewShapeXMLCode",
-            "script": "export/export_shape_xml.cocoascript"
-        },
+
+
+
+
         {
             "name": "Preferences",
             "identifier": "preferences",
@@ -128,8 +127,10 @@
         "title": "Android Res Export",
         "items": [
             "new_bitmap_asset",
-            "new_nine_patch_asset",
             "new_vector_asset",
+
+
+            "new_nine_patch_asset",
             "new_app_icon",
             "new_app_icon_legacy",
             "-",
