--- a/templates/language_en.yaml
+++ b/templates/language_en.yaml
@@ -2,19 +2,20 @@ description: Export Android resources in Sketch – PNG assets, app icon, nine-p
 new_bitmap_asset: New Bitmap Asset
 new_nine_patch_asset: New Nine-Patch Asset
 new_app_icon: New App Icon
-new_app_icon_legacy: New App Icon (Legacy)
 new_vector_asset: New Vector Asset
 export_png_assets: Export Bitmap Assets
 export_vector_drawable: Export Vector Drawables
 export_nine_patch: Export Nine-Patch Assets
 export_app_icon: Export App Icon
+view_color_code_from_selected_layer: View Color Code From Selected Layer
+nine_patch_preview: Nine-Patch Preview
+view_shape_code: View Shape Drawable Code
 preferences: Preferences
-utilities: Utilities
 help: Help
 web_site: Web Site
 report_issues: Report Issues
 donate: Donate
-change_language: Change Language
+
 no_selection: Please select at least one layer.
 
 language_file_not_found: Language file not found.
@@ -23,6 +24,7 @@ ok: OK
 cancel: Cancel
 export: Export
 save: Save
+copy: Copy
 
 can_not_create_nine_patch_from_artboard_or_symbol_master: Can't create Nine-Patch from Artboard or Symbol Master.
 
@@ -59,11 +61,15 @@ install_svgo_and_s2v_message: |-
     $ npm install -g svgo svg2vectordrawable
 no_vector_drawable_asset: No any vector drawable asset.
 
+export_dpis: Export DPIs
+asset_name_type: Asset Name Type
+vector_drawable_folder: Vector Drawable Folder
+change_language: Change Language
+others: Others
 show_in_finder_after_export: Show in Finder after export.
 
 
-export_shape_xml: Export Shape Drawable XML
-view_shape_xml_code: View Shape Drawable XML Code
+
 not_support_layer_style: Layer style like shadow and blur is not support by Android shape drawable.
 too_many_color_stop: The gradient in Android shape drawable not support greater than 3 colors.
 no_support_fill_type: The fill type is not support for Android shape drawable.
@@ -74,12 +80,13 @@ template_no_exists: Template file "%1" is no exists.
 current_page_is_no_template: Current page is no a Android app icon template.
 app_icon_not_find: Can't find Android app icon inside current page.
 code_preview: Code Preview
-nine_patch_preview: Nine-Patch Preview
+
 no_permission: No Permission
 cannot_export_to_folder: You can't export assets to this folder.
 select_one_nine_patch_asset: Please select a nine-patch asset.
 nine_patch_layer_structure_is_wrong: The layer structure of nine-patch asset is wrong.
-color_resource_code_from_selected_layer: View Color Code From Selected Layer
+
+
 no_selected_shape_layer: Please select at least one shape layer with solid or gradient fill.
 no_color_in_selected_layers: No any color in selected layer.
 
