--- a/templates/language_zh_cn.yaml
+++ b/templates/language_zh_cn.yaml
@@ -67,8 +67,7 @@ vector_drawable_folder: 矢量资源文件夹
 change_language: 切换语音
 others: 其他
 show_in_finder_after_export: 导出资源后在 Finder 中显示。
-
-
+least_export_dpis: 导出分辨率选项必须至少保留一项。
 
 not_support_layer_style: Android 形状资源不支持投影、模糊等图层样式。
 too_many_color_stop: Android 形状资源不支持大于 3 种颜色的渐变。
