--- a/Android_Res_Export.sketchplugin/Contents/Resources/manifest_zh_cn.json
+++ b/Android_Res_Export.sketchplugin/Contents/Resources/manifest_zh_cn.json
@@ -33,7 +33,6 @@
             "identifier": "new_app_icon",
             "script": "new/new_app_icon.cocoascript"
         },
-
         {
             "name": "点九图片预览",
             "identifier": "nine_patch_preview",
@@ -49,21 +48,6 @@
             "identifier": "view_shape_code",
             "script": "preview/view_shape_code.cocoascript"
         },
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
         {
             "name": "导出位图资源",
             "identifier": "export_png_assets",
@@ -71,7 +55,7 @@
         },
         {
             "name": "导出矢量资源",
-            "identifier": "export_vector_drawable",
+            "identifier": "export_vector_assets",
             "script": "export/export_vector_drawable.cocoascript"
         },
         {
@@ -84,10 +68,6 @@
             "identifier": "export_app_icon",
             "script": "export/export_app_icon.cocoascript"
         },
-
-
-
-
         {
             "name": "参数设置",
             "identifier": "preferences",
@@ -130,8 +110,8 @@
             "new_app_icon",
             "-",
             "export_png_assets",
+            "export_vector_assets",
             "export_nine_patch",
-            "export_vector_drawable",
             "export_app_icon",
             "-",
             "nine_patch_preview",
