--- a/Android_Res_Export.sketchplugin/Contents/Sketch/manifest.json
+++ b/Android_Res_Export.sketchplugin/Contents/Sketch/manifest.json
@@ -33,7 +33,6 @@
             "identifier": "new_app_icon",
             "script": "new/new_app_icon.cocoascript"
         },
-
         {
             "name": "Nine-Patch Preview",
             "identifier": "nine_patch_preview",
@@ -49,29 +48,14 @@
             "identifier": "view_shape_code",
             "script": "preview/view_shape_code.cocoascript"
         },
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
         {
             "name": "Export Bitmap Assets",
             "identifier": "export_png_assets",
             "script": "export/export_png_assets.cocoascript"
         },
         {
-            "name": "Export Vector Drawables",
-            "identifier": "export_vector_drawable",
+            "name": "Export Vector Assets",
+            "identifier": "export_vector_assets",
             "script": "export/export_vector_drawable.cocoascript"
         },
         {
@@ -84,10 +68,6 @@
             "identifier": "export_app_icon",
             "script": "export/export_app_icon.cocoascript"
         },
-
-
-
-
         {
             "name": "Preferences",
             "identifier": "preferences",
@@ -130,8 +110,8 @@
             "new_app_icon",
             "-",
             "export_png_assets",
+            "export_vector_assets",
             "export_nine_patch",
-            "export_vector_drawable",
             "export_app_icon",
             "-",
             "nine_patch_preview",
