--- a/templates/language_zh_cn.yaml
+++ b/templates/language_zh_cn.yaml
@@ -16,6 +16,7 @@ web_site: 网站
 report_issues: 问题反馈
 donate: 捐款
 
+no_png_asset: 无任何位图资源。
 no_selection: 请至少选中一个图层。
 
 language_file_not_found: 语言文件未找到。
@@ -28,28 +29,8 @@ copy: 复制
 
 can_not_create_nine_patch_from_artboard_or_symbol_master: 不可从画板或组件模版创建点九资源。
 
-vector_drawable_no_support_text: 文本图层无法转换为矢量资源，您需要先转为轮廓。
-vector_drawable_no_support_bitmap: 位图无法转换为矢量资源。
-vector_drawable_no_support_symbol_instance: 组件无法转换为矢量资源。
-vector_drawable_no_support_rotation: 矢量资源不支持旋转属性，请先变平形状。
-vector_drawable_no_support_flipped: 矢量资源不支持翻转属性，请先变平形状。
-vector_drawable_no_support_mask: 矢量资源不支持蒙板。
-vector_drawable_no_support_fill: 矢量资源仅支持单色填充。
-vector_drawable_no_support_border: 矢量资源仅支持单色描边。
-vector_drawable_no_support_shadow: 矢量资源不支持投影。
-vector_drawable_no_support_inner_shadow: 矢量资源不支持内投影。
-vector_drawable_no_support_blur: 矢量资源不支持模糊。
-can_not_group_artboard: 无法对组件母版或画板编组。
-no_png_asset: 无任何 PNG 位图资源。
-report_layer_rename: '图层命名格式不合法: %1 -> %2'
-report_layer_name_duplicate: '图层命名重复: %1'
-no_duplicate_and_invaild_asset_name: 无重复和不合法资源命名。
-install_imagemagick_title: 请检查是否安装 ImageMagick。
-install_imagemagick_message: |-
-    导出 Android 点九资源功能依赖于 ImageMagick 库。
-    通过 HomeBrew 安装,
-    $ brew install ImageMagick
 no_nine_patch_asset: 无任何点九资源。
+
 s2v_version_title: 您需要更新 svg2vectordrawable。
 s2v_version_message: |-
     在终端运行以下命令，以更新 svg2vectordrawable。
@@ -84,7 +65,6 @@ no_permission: 无写入权限
 cannot_export_to_folder: 无法导入文件到此文件夹。
 select_one_nine_patch_asset: 请选择一个点九资源。
 nine_patch_layer_structure_is_wrong: 点九资源的图层结构有误。
-
 
 no_selected_shape_layer: 请选中至少一个带有单色或渐变填充的图层。
 no_color_in_selected_layers: 选中的图层中没有任何颜色。
