--- a/Android_Res_Export.sketchplugin/Contents/Resources/manifest_en.json
+++ b/Android_Res_Export.sketchplugin/Contents/Resources/manifest_en.json
@@ -6,23 +6,22 @@
     "homepage": "https://github.com/Ashung/Android_Res_Export",
     "appcast": "https://ashung.github.io/Android_Res_Export/appcast.xml",
     "icon": "plugin_icon.png",
-    "version": "2.3.18",
+    "version": "3.0.0",
     "identifier": "com.ashung.hung.android_res_export",
     "compatibleVersion": "4",
     "bundleVersion": "1",
     "commands": [
         {
-            "handlers": {
-                "actions": {
-                    "OpenDocument": "onOpenDocument"
-                }
-            },
-            "script": "utilities/checking_language.cocoascript"
+            "name": "New Bitmap Asset",
+            "identifier": "new_bitmap_asset",
+            "handler": "newBitmapAsset",
+            "script": "new/new_asset.cocoascript"
         },
         {
-            "name": "New PNG Asset",
-            "identifier": "new_png_asset",
-            "script": "new/new_png_asset.cocoascript"
+            "name": "New Vector Asset",
+            "identifier": "new_vector_asset",
+            "handler": "newVectorAsset",
+            "script": "new/new_asset.cocoascript"
         },
         {
             "name": "New Nine-Patch Asset",
@@ -30,30 +29,33 @@
             "script": "new/new_nine_patch_asset.cocoascript"
         },
         {
-            "name": "New Vector Drawable Asset",
-            "identifier": "new_vector_drawable_asset",
-            "script": "new/new_vector_drawable_asset.cocoascript"
-        },
-        {
-            "name": "New App Icon (Legacy)",
-            "identifier": "new_app_icon_legacy",
-            "handler": "newAppIconTemplateLegacy",
-            "script": "new/new_app_icon.cocoascript"
-        },
-        {
             "name": "New App Icon",
             "identifier": "new_app_icon",
-            "handler": "newAppIconTemplate",
             "script": "new/new_app_icon.cocoascript"
         },
         {
-            "name": "Export PNG Assets",
+            "name": "Nine-Patch Preview",
+            "identifier": "nine_patch_preview",
+            "script": "preview/nine_patch_preview.cocoascript"
+        },
+        {
+            "name": "View Color Code From Selected Layer",
+            "identifier": "view_color_code_from_selected_layer",
+            "script": "preview/view_color_code.cocoascript"
+        },
+        {
+            "name": "View Shape Drawable Code",
+            "identifier": "view_shape_code",
+            "script": "preview/view_shape_code.cocoascript"
+        },
+        {
+            "name": "Export Bitmap Assets",
             "identifier": "export_png_assets",
             "script": "export/export_png_assets.cocoascript"
         },
         {
-            "name": "Export Vector Drawables",
-            "identifier": "export_vector_drawable",
+            "name": "Export Vector Assets",
+            "identifier": "export_vector_assets",
             "script": "export/export_vector_drawable.cocoascript"
         },
         {
@@ -65,50 +67,6 @@
             "name": "Export App Icon",
             "identifier": "export_app_icon",
             "script": "export/export_app_icon.cocoascript"
-        },
-        {
-            "name": "Export Shape Drawable XML",
-            "identifier": "export_shape_xml",
-            "handler": "exportShapeXML",
-            "script": "export/export_shape_xml.cocoascript"
-        },
-        {
-            "name": "Nine-Patch Preview",
-            "identifier": "nine_patch_preview",
-            "script": "preview/nine_patch_preview.cocoascript"
-        },
-        {
-            "name": "Color Resource Code From Selected Layer",
-            "identifier": "color_resource_code_from_selected_layer",
-            "handler": "colorResourceCodeFromLayers",
-            "script": "preview/color_code_preview.cocoascript"
-        },
-        {
-            "name": "Color Resource Code From Document Color",
-            "identifier": "color_resource_code_from_document_color",
-            "handler": "colorResourceCodeFromDocumentColor",
-            "script": "preview/color_code_preview.cocoascript"
-        },
-        {
-            "name": "View Shape Drawable XML Code",
-            "identifier": "view_shape_xml_code",
-            "handler": "viewShapeXMLCode",
-            "script": "export/export_shape_xml.cocoascript"
-        },
-        {
-            "name": "Add System Icon Grid Line",
-            "identifier": "add_system_icon",
-            "script": "utilities/add_system_icon.cocoascript"
-        },
-        {
-            "name": "Asset Name Validator",
-            "identifier": "asset_name_validator",
-            "script": "utilities/asset_name_validator.cocoascript"
-        },
-        {
-            "name": "Fixes Slice Names",
-            "identifier": "fixes_slice_name",
-            "script": "utilities/fixes_slice_name.cocoascript"
         },
         {
             "name": "Preferences",
@@ -128,66 +86,44 @@
             "script": "utilities/utilities.cocoascript"
         },
         {
-            "name": "Change Language",
-            "identifier": "change_language",
-            "script": "utilities/change_language.cocoascript"
-        },
-        {
-            "name": "Check for Update",
-            "identifier": "update",
-            "script": "utilities/update.cocoascript"
-        },
-        {
             "name": "Donate",
             "identifier": "donate",
             "handler": "donate",
             "script": "utilities/utilities.cocoascript"
         },
         {
-            "identifier": "reload_plugins",
-            "script": "utilities/reload_plugins.cocoascript"
+            "handlers": {
+                "actions": {
+                    "OpenDocument": "onOpenDocument"
+                }
+            },
+            "script": "utilities/change_language.cocoascript"
         }
     ],
     "menu": {
         "isRoot": false,
         "title": "Android Res Export",
         "items": [
-            "new_png_asset",
+            "new_bitmap_asset",
+            "new_vector_asset",
             "new_nine_patch_asset",
-            "new_vector_drawable_asset",
             "new_app_icon",
-            "new_app_icon_legacy",
             "-",
             "export_png_assets",
+            "export_vector_assets",
             "export_nine_patch",
-            "export_vector_drawable",
             "export_app_icon",
-            "export_shape_xml",
             "-",
             "nine_patch_preview",
-            "color_resource_code_from_selected_layer",
-            "color_resource_code_from_document_color",
-            "view_shape_xml_code",
-            "-",
-            {
-                "title": "Utilities",
-                "items": [
-                    "add_system_icon",
-                    "asset_name_validator",
-                    "fixes_slice_name"
-                ]
-            },
+            "view_shape_code",
+            "view_color_code_from_selected_layer",
             "-",
             "preferences",
-            "-",
             {
                 "title": "Help",
                 "items": [
                     "web_site",
                     "report_issues",
-                    "update",
-                    "-",
-                    "change_language",
                     "-",
                     "donate"
                 ]
