--- a/_data/release.yaml
+++ b/_data/release.yaml
@@ -1,3 +1,6 @@
+-   version: 3.0.0
+    commitID: 61b34cd0e5431049a3c33b9257196aa3021f7557
+
 -   version: 2.3.18
     commitID: ed816a0a8896891448e32b69e45da80405c41040
 
