--- a/Android_Res_Export.sketchplugin/Contents/Resources/manifest_zh_cn.json
+++ b/Android_Res_Export.sketchplugin/Contents/Resources/manifest_zh_cn.json
@@ -1,12 +1,12 @@
 {
     "name": "Android Res Export",
-    "description": "用于导出 Android 各种资源的 Sketch 插件，包括位图资源、应用启动图标、点九（Nine-patch）图片、形状 XML 、色彩资源 XML 和矢量（Vector Drawable）文件。",
+    "description": "用于导出 Android 各种资源的 Sketch 插件，支持位图、矢量、点九、应用图标、形状 XML 和色彩 XML。",
     "author": "Ashung Hung",
     "email": "Ashung.hung@gmail.com",
     "homepage": "https://github.com/Ashung/Android_Res_Export",
     "appcast": "https://ashung.github.io/Android_Res_Export/appcast.xml",
     "icon": "plugin_icon.png",
-    "version": "3.0.0",
+    "version": "3.1.0",
     "identifier": "com.ashung.hung.android_res_export",
     "compatibleVersion": "4",
     "bundleVersion": "1",
@@ -39,12 +39,12 @@
             "script": "preview/nine_patch_preview.cocoascript"
         },
         {
-            "name": "从选中图层生成色彩资源代码",
+            "name": "图层色彩代码",
             "identifier": "view_color_code_from_selected_layer",
             "script": "preview/view_color_code.cocoascript"
         },
         {
-            "name": "查看形状资源代码",
+            "name": "查看形状代码",
             "identifier": "view_shape_code",
             "script": "preview/view_shape_code.cocoascript"
         },
@@ -94,7 +94,8 @@
         {
             "handlers": {
                 "actions": {
-                    "OpenDocument": "onOpenDocument"
+                    "Startup": "changeLanguage",
+                    "OpenDocument": "changeLanguage"
                 }
             },
             "script": "utilities/change_language.cocoascript"
