--- a/_data/release.yaml
+++ b/_data/release.yaml
@@ -1,3 +1,6 @@
+-   version: 3.2.0
+    commitID: f80fb4a6c6bbc56e7cbacd8de605e655e81e4eba
+
 -   version: 3.1.0
     commitID: 396144b7f5ad6df421f90fd921a5b38bb4737fdc
 
