--- a/templates/language_en.yaml
+++ b/templates/language_en.yaml
@@ -3,7 +3,8 @@ new_bitmap_asset: New Bitmap Asset
 new_nine_patch_asset: New Nine-Patch Asset
 new_app_icon: New App Icon
 new_vector_asset: New Vector Asset
-export_png_assets: Export Bitmap Assets
+export_bitmap_assets_png: Export Bitmap Assets (PNG)
+export_bitmap_assets_webp: Export Bitmap Assets (WebP)
 export_vector_assets: Export Vector Assets
 export_nine_patch: Export Nine-Patch Assets
 export_app_icon: Export App Icon
@@ -16,7 +17,7 @@ web_site: Web Site
 report_issues: Report Issues
 donate: Donate
 
-no_png_asset: No any PNG asset.
+no_png_asset: No any bitmap asset.
 no_selection: Please select at least one layer.
 
 language_file_not_found: Language file not found.
@@ -53,6 +54,7 @@ change_language: Change Language
 others: Others
 show_in_finder_after_export: Show in Finder after export.
 least_export_dpis: At least keep one export dpi checked.
+webp_quality: WebP Quality
 
 not_support_layer_style: Layer style like shadow and blur is not support by Android shape drawable.
 too_many_color_stop: The gradient in Android shape drawable not support greater than 3 colors.
