--- a/templates/language_zh_cn.yaml
+++ b/templates/language_zh_cn.yaml
@@ -3,7 +3,8 @@ new_bitmap_asset: 新建位图资源
 new_nine_patch_asset: 新建点九资源
 new_app_icon: 新建应用图标
 new_vector_asset: 新建矢量资源
-export_png_assets: 导出位图资源
+export_bitmap_assets_png: 导出位图资源 (PNG)
+export_bitmap_assets_webp: 导出位图资源 (WebP)
 export_vector_assets: 导出矢量资源
 export_nine_patch: 导出点九资源
 export_app_icon: 导出应用图标
@@ -53,6 +54,7 @@ change_language: 切换语音
 others: 其他
 show_in_finder_after_export: 导出资源后在 Finder 中显示。
 least_export_dpis: 导出分辨率选项必须至少保留一项。
+webp_quality: WebP 图片质量
 
 not_support_layer_style: Android 形状资源不支持投影、模糊等图层样式。
 too_many_color_stop: Android 形状资源不支持大于 3 种颜色的渐变。
