--- a/_data/release.yaml
+++ b/_data/release.yaml
@@ -1,3 +1,6 @@
+-   version: 3.3.0
+    commitID: ad3f41518be0d397a137ee12a1359ddebd8165fc
+
 -   version: 3.2.0
     commitID: f80fb4a6c6bbc56e7cbacd8de605e655e81e4eba
 
