--- a/_data/release.yaml
+++ b/_data/release.yaml
@@ -1,3 +1,6 @@
+-   version: 3.4.0
+    commitID: 94cf8f03849e57b9c238ef6ab79df002f8c1a2f3
+
 -   version: 3.3.0
     commitID: ad3f41518be0d397a137ee12a1359ddebd8165fc
 
