Fix Sketch 52 support.

--- a/templates/language_en.yaml
+++ b/templates/language_en.yaml
@@ -35,7 +35,7 @@ no_nine_patch_asset: No any nine-patch asset.
 s2v_version_title: You need to update svg2vectordrawable to %1.
 s2v_version_message: |-
     Run follow command in the Terminal.
-    sudo npm update -g svg2vectordrawable
+    sudo npm install -g svg2vectordrawable
 install_s2v_title: Please check that you have svg2vectordrawable installed.
 install_s2v_message: |-
     Export Android vector drawable feature depend on Node.js and svg2vectordrawable.
