--- a/_data/release.yaml
+++ b/_data/release.yaml
@@ -1,3 +1,6 @@
+-   version: 3.5.0
+    commitID: b79c63ddd3e381410f29fcc220d08124c543c357
+
 -   version: 3.4.0
     commitID: 94cf8f03849e57b9c238ef6ab79df002f8c1a2f3
 
