--- a/_data/release.yaml
+++ b/_data/release.yaml
@@ -1,3 +1,6 @@
+-   version: 3.6.0
+    commitID: 7150d52a2562bb42ca2f2ab1c37a22259419ccaa
+
 -   version: 3.5.0
     commitID: b79c63ddd3e381410f29fcc220d08124c543c357
 
