--- a/templates/language_en.yaml
+++ b/templates/language_en.yaml
@@ -81,3 +81,5 @@ html_tip_bg_white: Use white background
 html_label_width: Width
 html_label_height: Height
 html_label_content: Content
+
+export_done: Export done!
