--- a/_data/release.yaml
+++ b/_data/release.yaml
@@ -1,3 +1,6 @@
+-   version: 3.7.0
+    commitID: 5436a14689610820abf5982af1dd01e7ef5c4faa
+
 -   version: 3.6.0
     commitID: 7150d52a2562bb42ca2f2ab1c37a22259419ccaa
 
