--- a/_data/release.yaml
+++ b/_data/release.yaml
@@ -1,3 +1,6 @@
+-   version: 3.8.0
+    commitID: 0b546bd5cf1f08962fba5aedcb0527c78cf85bac
+
 -   version: 3.7.0
     commitID: 5436a14689610820abf5982af1dd01e7ef5c4faa
 
