--- a/_data/release.yaml
+++ b/_data/release.yaml
@@ -1,3 +1,6 @@
+-   version: 3.8.1
+    commitID: fb719d58d8688ddbced06ad0cbafac82a3ce9611
+
 -   version: 3.8.0
     commitID: 0b546bd5cf1f08962fba5aedcb0527c78cf85bac
 
