--- a/_data/release.yaml
+++ b/_data/release.yaml
@@ -1,3 +1,6 @@
+-   version: 3.8.2
+    commitID: e681a2a2141802627f5db947aecaede4e755561f
+
 -   version: 3.8.1
     commitID: fb719d58d8688ddbced06ad0cbafac82a3ce9611
 
