Add float precision support. need to update svg2vectordrawable 2.6.10

--- a/templates/language_en.yaml
+++ b/templates/language_en.yaml
@@ -89,4 +89,4 @@ ga_tip: This plugin use Google Analytics for tacking user area, language and plu
 agree: Agree
 disagree: Disagree
 
-vector_drawable_precision: The precision of pathData in Vector Drawable
+vector_drawable_precision: Precision of pathData in Vector Drawable
