--- a/_data/release.yaml
+++ b/_data/release.yaml
@@ -1,3 +1,6 @@
+-   version: 3.8.3
+    commitID: 1f487d6482d1545b3717875268e19a9e082be23f
+
 -   version: 3.8.2
     commitID: e681a2a2141802627f5db947aecaede4e755561f
 
