--- a/_data/release.yaml
+++ b/_data/release.yaml
@@ -1,3 +1,6 @@
+-   version: 3.8.4
+    commitID: 385a8a9ed5df5674d8c59295aaeb6f10d71f77af
+
 -   version: 3.8.3
     commitID: 1f487d6482d1545b3717875268e19a9e082be23f
 
