--- a/_data/release.yaml
+++ b/_data/release.yaml
@@ -1,3 +1,6 @@
+-   version: 3.8.5
+    commitID: 224cfbaec1d950bd8b2fbb3db79b6c79b2fc10b9
+
 -   version: 3.8.4
     commitID: 385a8a9ed5df5674d8c59295aaeb6f10d71f77af
 
