--- a/package.json
+++ b/package.json
@@ -16,26 +16,21 @@
         "build": "skpm-build",
         "watch": "skpm-build --watch",
         "start": "skpm-build --watch",
-        "postinstall": "npm run build && skpm-link",
-        "lang": "node templates/make.js"
+        "postinstall": "npm run build && skpm-link"
     },
     "devDependencies": {
-        "@skpm/builder": "^0.5.9",
+        "@skpm/builder": "^0.7.11",
         "@skpm/extract-loader": "^2.0.2",
         "css-loader": "^3.2.0",
-        "html-loader": "^0.5.5",
-        "js-yaml": "^3.14.0",
-        "mustache": "^4.2.0"
+        "html-loader": "^0.5.5"
     },
     "resources": [
         "resources/**/*.js"
     ],
     "dependencies": {
-        "highlight.js": "^10.1.2",
-        "sketch-module-web-view": "^3.1.4",
-        "svg-path-bounds": "^1.0.1",
-        "svgo": "file:modules/svgo-browser",
-        "svgpath": "^2.3.0"
+        "highlight.js": "^11.0.1",
+        "sketch-module-web-view": "^3.5.1",
+        "svg2vectordrawable": "^2.7.1"
     },
     "author": "Ashung Hung <ashung.hung@gmail.com>"
 }
